# Ableton-OSC-CLI

./: .gitignore  AGENT_GUIDE.md  BUILD_NOTES.md  BUILD_PLAN.md  CLAUDE.md  pyproject.toml
abletonosc_cli/: __init__.py  audio.py  cli.py  device_specs.py  gemini.py  live.py  notes.py  osc_client.py
