[project]
name = "abletonosc-cli"
version = "0.1.0"
description = "A command-line interface for controlling Ableton Live via AbletonOSC"
requires-python = ">=3.9"
dependencies = [
    "python-osc>=1.8",
    "sounddevice>=0.4",
    "soundfile>=0.12",
    "requests>=2.28",
]

[project.scripts]
abletonosc = "abletonosc_cli.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["abletonosc_cli*"]
